condensing liquor categories

--- a/inventory_restocking_project.ipynb
+++ b/inventory_restocking_project.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joeldmott/inventory_project/blob/main/inventory_restocking_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "CC4jPqddzEY4"
       },
@@ -34,13 +44,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "akVHqq4j7J7R",
-        "outputId": "1fc3e68e-8dec-4101-96ea-d063e65bc13a"
+        "outputId": "b74b2daa-e810-4004-b2a6-d7d18a8cb6eb"
       },
       "outputs": [
         {
@@ -50,8 +60,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/joelmott/liquor-inventory-dataset\n",
             "License(s): MIT\n",
             "Downloading liquor-inventory-dataset.zip to /content\n",
-            " 98% 66.0M/67.1M [00:01<00:00, 54.2MB/s]\n",
-            "100% 67.1M/67.1M [00:01<00:00, 49.4MB/s]\n"
+            " 98% 66.0M/67.1M [00:04<00:00, 22.3MB/s]\n",
+            "100% 67.1M/67.1M [00:04<00:00, 14.1MB/s]\n"
           ]
         }
       ],
@@ -62,13 +72,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qWOWhybu747k",
-        "outputId": "cf60d62d-da56-4f3b-8f52-a158e03671f9"
+        "outputId": "94d68107-f88c-4726-9c1f-9bc3c89741ba"
       },
       "outputs": [
         {
@@ -86,14 +96,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
         },
         "id": "EWFuESJc-7Cw",
-        "outputId": "15e68026-230a-4ea2-bead-b8734867b099"
+        "outputId": "cbd42f4a-35e0-498f-c04c-7920e4871de6"
       },
       "outputs": [
         {
@@ -146,7 +156,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-64597390-13de-4075-ba7a-e6ac79b7500d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a449aa66-d941-4e6f-9709-42b000c0d945\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -316,7 +326,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64597390-13de-4075-ba7a-e6ac79b7500d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a449aa66-d941-4e6f-9709-42b000c0d945')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -368,12 +378,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-64597390-13de-4075-ba7a-e6ac79b7500d button.colab-df-convert');\n",
+              "        document.querySelector('#df-a449aa66-d941-4e6f-9709-42b000c0d945 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-64597390-13de-4075-ba7a-e6ac79b7500d');\n",
+              "        const element = document.querySelector('#df-a449aa66-d941-4e6f-9709-42b000c0d945');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -393,8 +403,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-47a87df9-9c8e-4bb0-ba9b-db57c92894af\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-47a87df9-9c8e-4bb0-ba9b-db57c92894af')\"\n",
+              "<div id=\"df-d2a41f28-37ad-4765-81d7-b891efd8477a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d2a41f28-37ad-4765-81d7-b891efd8477a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -513,7 +523,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-47a87df9-9c8e-4bb0-ba9b-db57c92894af button');\n",
+              "        document.querySelector('#df-d2a41f28-37ad-4765-81d7-b891efd8477a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -529,7 +539,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 4
         }
       ],
       "source": [
@@ -540,13 +550,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lGVIIyb6_Jt-",
-        "outputId": "9bafcfbe-1329-4ddc-dbcb-1ac37b9357e4"
+        "outputId": "e5314bd9-049a-46f4-d0c5-a9e91866384d"
       },
       "outputs": [
         {
@@ -593,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "YXN8bI1REd8y"
       },
@@ -606,13 +616,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sfI9YlYoCfY8",
-        "outputId": "31497ff8-8f42-4d11-fd1c-1f2234add9ba"
+        "outputId": "050c89f0-330c-4d9e-d99e-7d09a4e88e16"
       },
       "outputs": [
         {
@@ -623,7 +633,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 7
         }
       ],
       "source": [
@@ -634,13 +644,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8dG1XH2_PY1",
-        "outputId": "e9e32632-e1b9-4421-8ca2-764a5c525975"
+        "outputId": "0b472cd4-40dd-498f-bd86-4dc061511206"
       },
       "outputs": [
         {
@@ -662,13 +672,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "No-iHxoxBYLp",
-        "outputId": "824e9fdb-90bd-44de-f53f-ecd484b481bc"
+        "outputId": "d9d2c686-1ce7-4de6-94c8-f569eb48c2d2"
       },
       "outputs": [
         {
@@ -692,13 +702,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ZAUh2BFH5mk",
-        "outputId": "d34ec17d-eaa3-4444-9c0c-c65742603882"
+        "outputId": "35bd28b2-b52a-4cff-e747-22bc87da6b45"
       },
       "outputs": [
         {
@@ -725,7 +735,7 @@
       "source": [
         "That's a good amount of stores with a decent amount of rows to examine. We may wind up looking at the top ten or top 100 stores only depending on how the project goes, but maybe we can incorporate all 290.\n",
         "\n",
-        "Let's also look at vendors; while stores represent a variable that we may use to subdivide the dataset, vendors will remain an independent variable. As a categorical variable, they may balloon out to an overwhelming number of one-hot encoded variables, so we'll alomost certainly need to find a way to limit these."
+        "Let's also look at vendors; while stores represent a variable that we may use to *subdivide* the dataset, vendors will remain an independent variable. As a categorical variable, they may balloon out to an overwhelming number of one-hot encoded variables, so we'll alomost certainly need to find a way to limit these."
       ],
       "metadata": {
         "id": "gIGU3DnBwv8Z"
@@ -742,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CH4zz1OyWjGL",
-        "outputId": "ac193f2f-6bf8-4a63-a429-4ee0b14c5f2d"
+        "outputId": "0e3fb587-c51a-4a80-b21e-773d4344993e"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,9 +782,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-SEwaTSewBiI",
-        "outputId": "8e86873d-867f-43d4-9ada-1cd76b17daca"
+        "outputId": "04dd6c3c-85c1-42c3-8222-a85a93dee3af"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +794,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 12
         }
       ]
     },
@@ -801,9 +811,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qq0LJDCWwBxr",
-        "outputId": "3e0e05cd-6f92-43a9-95d8-8552c9376a5e"
+        "outputId": "819d5477-2a79-4d32-da9a-60a7b1845f56"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -813,7 +823,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 13
         }
       ]
     },
@@ -823,11 +833,11 @@
         "id": "H4osezOQMlwX"
       },
       "source": [
-        "35 vendors combined with a liqour categories and a few more continuous columns is probably still going to be too many to model without a problematic amount of noise and/or sparsity in our data. We may consider adding this limitation to each store along the way. In other words, when we run a model on an individual store, we'll only include vendors that serviced that store with >= 1,000 orders.\n",
+        "35 vendors combined with the liqour categories and a few more continuous columns is probably still going to be too many to model without a problematic amount of noise and/or sparsity in our data. We may consider adding a limitation here to each store along the way. In other words, when we run a model on an individual store, we'll only include vendors that serviced that store with >= 1,000 orders.\n",
         "\n",
-        "This is especially important when we consider that this dataset covers an entire *state* with urban, suburban, and rural stores that all move different volumes of inventory.\n",
+        "This is especially important when we consider that this dataset covers an entire *state* with urban, suburban, and rural stores that all move different volumes of inventory; the vendors used will almost certainly vary from one store to the next.\n",
         "\n",
-        "Before we start examining stores in more detail, we need to take care of a few other things in our broad DataFrame. Specifically, we need to drop unnecessary columns and contend with what appear to be a few NaNs.\n",
+        "Before we start examining stores in more detail, we need to take care of a few other things in our broader DataFrame. Specifically, we need to drop unnecessary columns and contend with what appear to be a few NaNs.\n",
         "\n",
         "Let's first examine columns so we can see which to drop. I appreciate how the data has store, location, and item names and numbers, but for our purposes, we can drop a number of these redundancies."
       ]
@@ -847,9 +857,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iqJE9aNpLb9q",
-        "outputId": "6207039f-c8db-4df7-cc03-c18d2d4c1617"
+        "outputId": "768e3efd-14f4-4139-bb00-b4af6ec5b0ed"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-IKrcl3dLcZR",
-        "outputId": "69e2d89b-4001-42ed-f559-20ab31db5776"
+        "outputId": "440f25e3-0896-45b4-fc71-9191eaf25744"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +915,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 113
+          "execution_count": 15
         }
       ]
     },
@@ -919,9 +929,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Ja-yJW2LcjX",
-        "outputId": "810402f6-fece-47ff-f185-ddea45010bca"
+        "outputId": "78be8f30-0b2e-46de-d861-d9c133ea6b46"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +941,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 114
+          "execution_count": 16
         }
       ]
     },
@@ -955,9 +965,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hjzsCQJKOPGz",
-        "outputId": "48a9fa24-37a8-445b-ba76-73a24b4b6a26"
+        "outputId": "95029927-4155-4ed7-aa5c-b6e71a7cd638"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,7 +994,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now we can examine the categorical columns more carefully. We'll use the 'Stone Number' column later to subdivide the trimmed_df into stores, so let's begin with the 'Category Name' column."
+        "Now we can examine the categorical columns more carefully. We'll use the 'Store Number' column later on in order to subdivide the trimmed_df into stores, so let's begin with the 'Category Name' column."
       ],
       "metadata": {
         "id": "w_87Iza7Rvav"
@@ -1000,9 +1010,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WI9SZAEASPGN",
-        "outputId": "0818bfd4-44df-41a6-8359-373aac92f555"
+        "outputId": "b90c5a71-8676-4030-e933-3f7fda6952df"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1022,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 18
         }
       ]
     },
@@ -1026,9 +1036,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vzx1WphpRvzv",
-        "outputId": "cdd8ff33-90cf-4cc7-9dde-2abdf54fb32c"
+        "outputId": "6da7c236-2069-4e4e-e5c9-5597cb5cf82e"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1182,6 +1192,8 @@
         "#I can use the str.contains method for some categories that are easier\n",
         "# to generalize. Let's do those first:\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('BOURBON', 'Bourbon'), 'Category Name'] = 'BOURBON'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('SCOTCH', 'Scotch'), 'Category Name'] = 'SCOTCH'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('Tequila'), 'Category Name'] = 'TEQUILA'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('GIN', 'Gin'), 'Category Name'] = 'GIN'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('RUM', 'Rum'), 'Category Name'] = 'RUM'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('AMARETTO', 'Amaretto'), 'Category Name'] = 'AMARETTO'"
@@ -1189,16 +1201,38 @@
       "metadata": {
         "id": "K81_mnbzRfZK"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Now we'll make more specific generalizations:\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'STRAIGHT BOURBON WHISKIES', 'Category Name'] = 'BOURBON'\n",
+        "#Vodkas\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'VODKA 80 PROOF', 'Category Name'] = 'VODKA'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED VODKA', 'Category Name'] = 'VODKA'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED VODKA - MISC', 'Category Name'] = 'VODKA'\n",
+        "#Liqueuers\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'MISC. IMPORTED CORDIALS & LIQUEURS', 'Category Name'] = 'GENERAL LIQUEUERS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'MISC. AMERICAN CORDIALS & LIQUEURS', 'Category Name'] = 'GENERAL LIQUEUERS'\n",
+        "#Brandies\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'AMERICAN GRAPE BRANDIES', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED GRAPE BRANDIES', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'MISCELLANEOUS BRANDIES', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'American Brandies', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'Imported Brandies', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'BLACKBERRY BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'APRICOT BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'CHERRY BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'PEACH BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
+        "#Schnapps\n",
+        "\n"
+      ],
       "metadata": {
         "id": "moNA2aUrRfgk"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -2072,7 +2106,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2VNkojQYK3qAPLt2wc2ja"
+      "authorship_tag": "ABX9TyNE9nm3CAoHQtzKECvqfZ6n",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
