still working on carefully condensing the liquor categories

--- a/inventory_restocking_project.ipynb
+++ b/inventory_restocking_project.ipynb
@@ -1192,11 +1192,13 @@
         "#I can use the str.contains method for some categories that are easier\n",
         "# to generalize. Let's do those first:\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('BOURBON', 'Bourbon'), 'Category Name'] = 'BOURBON'\n",
-        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('SCOTCH', 'Scotch'), 'Category Name'] = 'SCOTCH'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('Tequila'), 'Category Name'] = 'TEQUILA'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('VODKA', 'Vodka'), 'Category Name'] = 'VODKA'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('GIN', 'Gin'), 'Category Name'] = 'GIN'\n",
         "trimmed_df.loc[trimmed_df['Category Name'].str.contains('RUM', 'Rum'), 'Category Name'] = 'RUM'\n",
-        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('AMARETTO', 'Amaretto'), 'Category Name'] = 'AMARETTO'"
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('AMARETTO', 'Amaretto'), 'Category Name'] = 'LIQUEUR'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('LIQUEUR', 'Liqueur'), 'Category Name'] = 'LIQUEUR'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'].str.contains('CREME DE', 'Liqueur'), 'Category Name'] = 'LIQUEUR'"
       ],
       "metadata": {
         "id": "K81_mnbzRfZK"
@@ -1208,14 +1210,9 @@
       "cell_type": "code",
       "source": [
         "#Now we'll make more specific generalizations:\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'STRAIGHT BOURBON WHISKIES', 'Category Name'] = 'BOURBON'\n",
-        "#Vodkas\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'VODKA 80 PROOF', 'Category Name'] = 'VODKA'\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED VODKA', 'Category Name'] = 'VODKA'\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED VODKA - MISC', 'Category Name'] = 'VODKA'\n",
-        "#Liqueuers\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'MISC. IMPORTED CORDIALS & LIQUEURS', 'Category Name'] = 'GENERAL LIQUEUERS'\n",
-        "trimmed_df.loc[trimmed_df['Category Name'] == 'MISC. AMERICAN CORDIALS & LIQUEURS', 'Category Name'] = 'GENERAL LIQUEUERS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'Scotch', 'Category Name'] = 'SCOTCH'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'Canadian Whiskies', 'Category Name'] = 'CANADIAN WHISKIES'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'Tennessee Whiskies', 'Category Name'] = 'TENNESSEE WHISKIES'\n",
         "#Brandies\n",
         "trimmed_df.loc[trimmed_df['Category Name'] == 'AMERICAN GRAPE BRANDIES', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
         "trimmed_df.loc[trimmed_df['Category Name'] == 'IMPORTED GRAPE BRANDIES', 'Category Name'] = 'GRAPE-BASED BRANDIES'\n",
@@ -1227,7 +1224,21 @@
         "trimmed_df.loc[trimmed_df['Category Name'] == 'CHERRY BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
         "trimmed_df.loc[trimmed_df['Category Name'] == 'PEACH BRANDIES', 'Category Name'] = 'OTHER FRUIT BRANDIES'\n",
         "#Schnapps\n",
-        "\n"
+        "trimmed_df.loc[trimmed_df['Category Name'] == ['IMPORTED SCHNAPPS',\n",
+        "                                               'Imported Schnapps',\n",
+        "                                               'SCHNAPPS - IMPORTED'], 'Category Name'] = 'MISCELLANEOUS SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'PEACH SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'CINNAMON SCHNAPPS', 'Category Name'] = 'MISCELLANEOUS SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'APPLE SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'BUTTERSCOTCH SCHNAPPS', 'Category Name'] = 'MISCELLANEOUS SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'WATERMELON SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'ROOT BEER SCHNAPPS', 'Category Name'] = 'MISCELLANEOUS SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'RASPBERRY SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'GRAPE SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'STRAWBERRY SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'TROPICAL FRUIT SCHNAPPS', 'Category Name'] = 'FRUIT SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'SPEARMINT SCHNAPPS', 'Category Name'] = 'MISCELLANEOUS SCHNAPPS'\n",
+        "trimmed_df.loc[trimmed_df['Category Name'] == 'Canadian Whiskies', 'Category Name'] = 'CANADIAN WHISKIES'\n"
       ],
       "metadata": {
         "id": "moNA2aUrRfgk"
@@ -2106,7 +2117,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNE9nm3CAoHQtzKECvqfZ6n",
+      "authorship_tag": "ABX9TyPFd6jdmPQxUqCpFWLQ1jO4",
       "include_colab_link": true
     },
     "kernelspec": {
