may have finished preprocessing, moving on to testing for stationary time-series data

--- a/inventory_restocking_project.ipynb
+++ b/inventory_restocking_project.ipynb
@@ -3983,7 +3983,7 @@
       "source": [
         "#X_train.drop('Category Name', inplace=True)\n",
         "X_train_encoded = pd.concat([X_train, X_train_categorical_encoded], axis=1)\n",
-        "X_train_encoded.drop('Category Name', axis=1, inplace=True)\n",
+        "X_train_encoded.drop(['Category Name', 'MISCELLANEOUS SCHNAPPS'], axis=1, inplace=True)\n",
         "X_train_encoded"
       ],
       "metadata": {
@@ -4769,6 +4769,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Leaving off on 6/18: Do I run the Dickey-Fuller test on this now? Of course, we'll see it's not stationary so will I stationarize it then? Next, maybe I eliminate some of these features because they don't matter, like 'store number' and 'sale price' and 'pack'? Then, can I do a naive model and then the ARIMA stuff with the ACF/PACF (。﹏。*)"
+      ],
+      "metadata": {
+        "id": "OhMSnRoymVAv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -4781,7 +4790,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPK+pTF4tQI14l8nMJuaGta",
+      "authorship_tag": "ABX9TyNUWJ5HUkf6dDkYG9R9R3Zd",
       "include_colab_link": true
     },
     "kernelspec": {
