integrating RMSE function with the AIC function so each model gets a printout of both scores

--- a/inventory_restocking_project.ipynb
+++ b/inventory_restocking_project.ipynb
@@ -4161,12 +4161,13 @@
         "    true = train_with_ind.iloc[val_ind, -1]\n",
         "    RMSEs.append(np.sqrt(mean_squared_error(true, preds)))\n",
         "  #return the mean of all RMSEs\n",
-        "  return np.mean(RMSEs)"
+        "  RMSE_mean = np.mean(RMSEs)\n",
+        "  return RMSE_mean"
       ],
       "metadata": {
         "id": "uYA1iuGyXZdQ"
       },
-      "execution_count": 63,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -4179,9 +4180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2cu_YQtrYUnP",
-        "outputId": "81acffe2-6f14-4b62-fdcc-f6b4fcd27731"
+        "outputId": "8bff3cb2-7503-41fe-ddb3-a69be16fc446"
       },
-      "execution_count": 64,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4191,7 +4192,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 100
         }
       ]
     },
@@ -4417,8 +4418,11 @@
         "  grid = ParameterGrid(param_grid)\n",
         "  #empty dictionary for holding AIC scores:\n",
         "  AICs = {}\n",
+        "  #empty dictionary for holding RMSE scores:\n",
+        "  RMSEs = {}\n",
         "  #iterate through params and append the AICs scores\n",
         "  for params in grid:\n",
+        "    #this block will get the AIC score and the respective model order params\n",
         "    model = ARIMA(train_data,\n",
         "                  order = (params['p'],\n",
         "                           params['d'],\n",
@@ -4427,14 +4431,32 @@
         "    new_key = model.aic\n",
         "    new_value = params\n",
         "    AICs[new_key] = new_value\n",
+        "\n",
+        "    #this block runs a cross-validated RMSE function on that same model\n",
+        "    #resetting the index for easier splitting for the RMSE\n",
+        "    train_with_ind = train_data.reset_index()\n",
+        "    #empty dictionary to hold each model's mean RMSE\n",
+        "    mean_RMSEs = {}\n",
+        "    #iterate through folds and append RMSE\n",
+        "    #empty list to hold each fold's RMSE\n",
+        "    for train_ind, val_ind in split.split(train_with_ind):\n",
+        "      fold_RMSEs = []\n",
+        "      preds = model.predict(start=val_ind[0], end=val_ind[-1])\n",
+        "      true = train_with_ind.iloc[val_ind, -1]\n",
+        "      fold_RMSEs.append(np.sqrt(mean_squared_error(true, preds)))\n",
+        "    #return the mean of all RMSEs\n",
+        "    RMSE_mean = np.mean(fold_RMSEs)\n",
+        "    new_RMSE_key = RMSE_mean\n",
+        "    RMSEs[new_RMSE_key] = params\n",
         "  #return lowest AIC\n",
         "  lowest_AIC = min(AICs.items(), key=lambda x: x[0])\n",
-        "  return lowest_AIC"
+        "  lowest_RMSE = min(mean_RMSEs.items(), key=lambda x: x[0])\n",
+        "  return lowest_AIC, lowest_RMSE"
       ],
       "metadata": {
         "id": "ZmB55laeZHPn"
       },
-      "execution_count": 97,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -4536,7 +4558,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJqIcz96w1sxjZq7MUeZkN",
+      "authorship_tag": "ABX9TyNppc4FPSAUY6tO/E1udLkq",
       "include_colab_link": true
     },
     "kernelspec": {
